--- a/transitionsAndAnimations/transitionsAndAnimations.css
+++ b/transitionsAndAnimations/transitionsAndAnimations.css
@@ -1,5 +1,5 @@
 /*
-CSS Transitions and Animations are ways to add dynamic, smooth changes to elements on your web page
+CSS Transitions and animations are ways to add dynamic, smooth changes to elements on your web page
 
 Transitions allow you to change property values smoothly over a given duration. They're typically used for simple, one-step animations triggered by events like hovering
 
